--- a/css/main.css
+++ b/css/main.css
@@ -47,16 +47,20 @@ label {
     text-decoration: underline;
     text-decoration-color: deepskyblue;
 }
-#btnSend btnBack{
-    color: white;
-    height: 3rem;
-    width: 3rem;
-    line-height: 3rem;
+#btnSend, #btnBack{
+    color: black;
+    height: 5rem;
+    width: 6rem;
+    line-height: 2rem;
     text-align: center;
-    font-size: 2rem;
-    margin: 1rem;
+    font-size: 1rem;
+    margin: 2rem;
+     text-shadow: 1px 1px red;
     border-radius: 50%;
-    background-color: aliceblue;
+    background-color: white;
+    text-decoration: underline;
+    text-decoration-color: deepskyblue;
+    border-color:green;
     }
 
 
@@ -75,5 +79,7 @@ span{
   font-size: 50px;
     color: white;
     text-decoration: underline;
+    
+    
     
 }
